tests/fail/20_unary_minus_bool.lang
функция Начало(): целое {
  // Семантический анализатор должен выдать ошибку:
  // "Оператор '-' применим только к числам"
  пост лог b = -истина;
  вернуть 0;
}
